tests/agl/rejections/type/set_type_mismatch.agl
var n: int = 1
set n = "two"
